--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title></title>
+		<title>刘文杰的个人网页</title>
+		<body>
+			background
+		</body>
 	</head>
 	<body>
 		<a href="CEE_volunteer_form/index.html">第一次作业</a>
 		<a href="高考志愿填报/">第二次作业</a>
+		
 	</body>
 </html>
