--- a/index.html
+++ b/index.html
@@ -3,13 +3,27 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>刘文杰的个人网页</title>
-		<body>
-			background
-		</body>
+		<style>
+			<body>
+			{
+				background: url();
+			}
+			</body>
+		</style>
+		<style>
+			.head{
+				width: 100%;
+				background-color: blanchedalmond;
+				height: 200px;
+			}
+		</style>
 	</head>
-	<body>
-		<a href="CEE_volunteer_form/index.html">第一次作业</a>
-		<a href="高考志愿填报/">第二次作业</a>
-		
+	<body >
+		<div class="head">
+			<a href="CEE_volunteer_form/index.html">第一次作业</a>
+			<br />
+			<a href="高考志愿填报/index.html">第二次作业</a>
+		</div>
+
 	</body>
 </html>
