--- a/index.html
+++ b/index.html
@@ -4,13 +4,6 @@
 		<meta charset="utf-8" />
 		<title>刘文杰的个人网页</title>
 		<style>
-			<body>
-			{
-				background: url();
-			}
-			</body>
-		</style>
-		<style>
 			.head{
 				width: 100%;
 				background-color: blanchedalmond;
@@ -18,11 +11,12 @@
 			}
 		</style>
 	</head>
-	<body >
+	<body  background="">
 		<div class="head">
 			<a href="CEE_volunteer_form/index.html">第一次作业</a>
 			<br />
 			<a href="高考志愿填报/index.html">第二次作业</a>
+			<a href="我的军训生活/index.html">第三次作业</a>
 		</div>
 
 	</body>
