--- a/index.html
+++ b/index.html
@@ -5,18 +5,69 @@
 		<title>刘文杰的个人网页</title>
 		<style>
 			.head{
-				width: 100%;
+				width: 882px;
 				background-color: blanchedalmond;
-				height: 200px;
+				height: 1000px;
+				margin: 0 auto;
+			}
+			.left{
+				width: 588px;
+				background-color: blanchedalmond;
+				height: 1000px;
+				margin: 0 auto;
+				float: left;
+			}
+			.right{
+				width: 294px;
+				height: 1000px;
+				background-color: blanchedalmond;
+				margin: 0 auto;
+				float: left;
+			}
+			.righta{
+				width: 294px;
+				background-color: blanchedalmond;
+				height: 73.6px;
+				margin: 0 auto;
+				float: left;
+			}
+			.rightb{
+				width: 294px;
+				background-color: blanchedalmond;
+				height: 298px;
+				margin: 0 auto;
 			}
 		</style>
 	</head>
 	<body  background="">
 		<div class="head">
-			<a href="CEE_volunteer_form/index.html">第一次作业</a>
-			<br />
-			<a href="高考志愿填报/index.html">第二次作业</a>
-			<a href="我的军训生活/index.html">第三次作业</a>
+			<div class="left">
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="CEE_volunteer_form/index.html"><font color="crimson" size="6" face="楷体">第一次作业</font></a>
+				<br />
+				<br />
+				<br />
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="高考志愿填报/index.html"><font color="crimson" size="6" face="楷体">第二次作业</font></a>
+				<br />
+				<br />
+				<br />
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="我的军训生活/index.html"><font color="crimson" size="6" face="楷体">第三次作业</font></a>
+			</div>
+			<div class="right">
+				<div class="righta">
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<font color="black" size="6" face="楷体">本人照骗</font>
+					<br />
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<font color="black" size="6" face="楷体">↓</font>
+				</div>
+				<div class="rightb">
+					<img src="img/QQ图片20191013110042.jpg" width="294"/>
+				</div>
+			</div>
 		</div>
 
 	</body>
