--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
 		<meta charset="utf-8" />
 		<title>刘文杰的个人网页</title>
 		<style>
+			body{
+				background: cornsilk;
+				background: url(img/1566207674925.jpg);
+			}
 			.head{
 				width: 882px;
-				background-color: blanchedalmond;
 				height: 1000px;
 				margin: 0 auto;
 			}
 			.left{
 				width: 588px;
-				background-color: blanchedalmond;
 				height: 1000px;
 				margin: 0 auto;
 				float: left;
@@ -20,53 +22,58 @@
 			.right{
 				width: 294px;
 				height: 1000px;
-				background-color: blanchedalmond;
 				margin: 0 auto;
 				float: left;
 			}
-			.righta{
-				width: 294px;
-				background-color: blanchedalmond;
-				height: 73.6px;
+			.lefta{
+				width: 588px;
+				height: 200px;
 				margin: 0 auto;
 				float: left;
 			}
-			.rightb{
-				width: 294px;
-				background-color: blanchedalmond;
+			.leftc{
+				width: 588px;
 				height: 298px;
 				margin: 0 auto;
+				margin-top: 20px;
+			}
+			.leftd{
+				width: 588px;
+				height: 298px;
+				margin: 0 auto;
+				margin-top: 200px;
 			}
 		</style>
 	</head>
 	<body  background="">
 		<div class="head">
 			<div class="left">
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="CEE_volunteer_form/index.html"><font color="crimson" size="6" face="楷体">第一次作业</font></a>
-				<br />
-				<br />
-				<br />
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="高考志愿填报/index.html"><font color="crimson" size="6" face="楷体">第二次作业</font></a>
-				<br />
-				<br />
-				<br />
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="我的军训生活/index.html"><font color="crimson" size="6" face="楷体">第三次作业</font></a>
-			</div>
-			<div class="right">
-				<div class="righta">
+				<div class="lefta">
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					<font color="black" size="6" face="楷体">本人照骗</font>
+					<a href="CEE_volunteer_form/index.html"><font color="crimson" size="6" face="楷体">第一次作业</font></a>
+					<br />
+					<br />
 					<br />
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					<font color="black" size="6" face="楷体">↓</font>
+					<a href="高考志愿填报/index.html"><font color="crimson" size="6" face="楷体">第二次作业</font></a>
+					<br />
+					<br />
+					<br />
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="我的军训生活/index.html"><font color="crimson" size="6" face="楷体">第三次作业</font></a>
 				</div>
-				<div class="rightb">
+				<div class="leftc">
 					<img src="img/QQ图片20191013110042.jpg" width="294"/>
 				</div>
+				<div class="leftd">
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<font color="black" size="6" face="楷体">↑</font>
+					&nbsp;&nbsp;
+					<font color="black" size="6" face="楷体">本人照骗</font>
+					<br />
+				</div>
+			</div>
+			<div class="right">
 			</div>
 		</div>
 
