--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			}
 			.lefta{
 				width: 588px;
-				height: 200px;
+				height: 300px;
 				margin: 0 auto;
 				float: left;
 			}
@@ -39,9 +39,12 @@
 			}
 			.leftd{
 				width: 588px;
-				height: 298px;
+				height: 50px;
 				margin: 0 auto;
-				margin-top: 200px;
+				margin-top: 300px;
+			}
+			.lefte{
+				margin-top: 0;
 			}
 		</style>
 	</head>
@@ -61,9 +64,14 @@
 					<br />
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					<a href="我的军训生活/index.html"><font color="crimson" size="6" face="楷体">第三次作业</font></a>
+					<br />
+					<br />
+					<br />
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="我的家乡/index.html"><font color="crimson" size="6" face="楷体">第四次作业</font></a>
 				</div>
 				<div class="leftc">
-					<img src="img/QQ图片20191013110042.jpg" width="294"/>
+					<img src="我的军训生活/img/QQ图片20191021133712.png" width="294"/>
 				</div>
 				<div class="leftd">
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -72,6 +80,19 @@
 					<font color="black" size="6" face="楷体">本人照骗</font>
 					<br />
 				</div>
+				<div class="lefte">
+					<font color="black" size="6" face="楷体">什么？没有音乐？</font>
+					<br />
+					<font color="black" size="6" face="楷体">不好意思</font>
+					<br />
+					<font color="black" size="6" face="楷体">不玩那些花里胡哨的</font>
+					<br />
+					<font color="black" size="6" face="楷体">就这么简单</font>
+					<br/>
+					<font color="black" size="6" face="楷体">简约而不失奢华</font>
+					
+				</div>
+				<img src="我的军训生活/img/QQ图片20191021133818.png" />
 			</div>
 			<div class="right">
 			</div>
