--- a/我的家乡/index.html
+++ b/我的家乡/index.html
@@ -87,9 +87,9 @@
 			</div>
 			<div class="head3">
 				<ul class="nav fl">
-					<li class="nav-item"><a href="http://127.0.0.1:8848/%E6%88%91%E7%9A%84%E5%AE%B6%E4%B9%A1/%E5%8F%B9%E6%97%A9%E8%8C%B6.html" target="_blank" bosszone="dh_13"><font size="4" face="楷体">叹早茶</font></a></li>
+					<li class="nav-item"><a href="tanzaocha.html" target="_blank" bosszone="dh_13"><font size="4" face="楷体">叹早茶</font></a></li>
 					
-					<li class="nav-item"><a href="http://127.0.0.1:8848/%E6%88%91%E7%9A%84%E5%AE%B6%E4%B9%A1/%E6%97%85%E6%B8%B8%E6%99%AF%E7%82%B9.html" target="_blank" bosszone="dh_13"><font size="4" face="楷体">旅游景点</font></a></li>
+					<li class="nav-item"><a href="lyoujingdian.html" target="_blank" bosszone="dh_13"><font size="4" face="楷体">旅游景点</font></a></li>
 					
 				</ul>
 			</div>
