--- a/我的家乡/index.html
+++ b/我的家乡/index.html
@@ -87,9 +87,9 @@
 			</div>
 			<div class="head3">
 				<ul class="nav fl">
-					<li class="nav-item"><a href="/js/tanzaocha.html" target="_blank" bosszone="dh_13"><font size="4" face="楷体">叹早茶</font></a></li>
+					<li class="nav-item"><a href="js/tanzaocha.html" target="_blank" bosszone="dh_13"><font size="4" face="楷体">叹早茶</font></a></li>
 					
-					<li class="nav-item"><a href="/js/lyoujingdian.html" target="_blank" bosszone="dh_13"><font size="4" face="楷体">旅游景点</font></a></li>
+					<li class="nav-item"><a href="js/lyoujingdian.html" target="_blank" bosszone="dh_13"><font size="4" face="楷体">旅游景点</font></a></li>
 					
 				</ul>
 			</div>
