--- a/我的家乡/js/lyoujingdian.html
+++ b/我的家乡/js/lyoujingdian.html
@@ -136,13 +136,13 @@
 			</div>
 			<div class="box6">
 				<div class="phto4">
-					<img src="img/timg%20(1).jpg"  width="310px" height="436.81px"/>
+					<img src="../img/timg%20(1).jpg"  width="310px" height="436.81px"/>
 				</div>
 				<div class="phto4">
-					<img src="img/timg.jpg"  width="310px" height="436.81px"/>
+					<img src="../img/timg.jpg"  width="310px" height="436.81px"/>
 				</div>
 				<div class="phto4">
-					<img src="img/timg%20(2).jpg"  width="310px" height="436.81px"/>
+					<img src="../img/timg%20(2).jpg"  width="310px" height="436.81px"/>
 				</div>
 			</div>
 			<div class="qilou">
@@ -153,13 +153,13 @@
 			</div>
 			<div class="box8">
 				<div class="phto4">
-					<img src="img/u=3198901430,2986784648&fm=26&gp=0.jpg"  width="310px" height="436.81px"/>
+					<img src="../img/u=3198901430,2986784648&fm=26&gp=0.jpg"  width="310px" height="436.81px"/>
 				</div>
 				<div class="phto4">
-					<img src="img/u=1510152298,1226132572&fm=26&gp=0.jpg" width="310px" height="436.81px"/>
+					<img src="../img/u=1510152298,1226132572&fm=26&gp=0.jpg" width="310px" height="436.81px"/>
 				</div>
 				<div class="phto4">
-					<img src="img/u=3848641989,223885563&fm=26&gp=0.jpg"  width="310px" height="436.81px"/>
+					<img src="../img/u=3848641989,223885563&fm=26&gp=0.jpg"  width="310px" height="436.81px"/>
 				</div>
 			</div>
 			<div class="Canton Tower">
@@ -172,13 +172,13 @@
 			</div>
 			<div class="box10">
 				<div class="phto4">
-					<img src="img/下载.jpg"  width="310px" height="436.81px"/>
+					<img src="../img/下载.jpg"  width="310px" height="436.81px"/>
 				</div>
 				<div class="phto4">
-					<img src="img/u=2121526767,4002777633&fm=26&gp=0.jpg" width="310px" height="436.81px"/>
+					<img src="../img/u=2121526767,4002777633&fm=26&gp=0.jpg" width="310px" height="436.81px"/>
 				</div>
 				<div class="phto4">
-					<img src="img/u=2016338179,2689506832&fm=26&gp=0.jpg"  width="310px" height="436.81px"/>
+					<img src="../img/u=2016338179,2689506832&fm=26&gp=0.jpg"  width="310px" height="436.81px"/>
 				</div>
 			</div>
 			<div class="yuexiugongyuan">
