--- a/我的家乡/js/tanzaocha.html
+++ b/我的家乡/js/tanzaocha.html
@@ -12,7 +12,7 @@
 			}
 			.box1{
 				width: 964.8px;
-				height: 3000px;
+				height: 200px;
 				background-color: burlywood;
 				margin-top: 50px;
 				margin: 0 auto;
@@ -36,7 +36,7 @@
 			}
 			.box3{
 				width: 964.8px;
-				height: 3000px;
+				height: 200px;
 				margin: 0 auto;
 			}
 			p {
@@ -48,7 +48,7 @@
 			.box4{
 				
 				width: 1000px;
-				height: 862.412px;
+				height: 500px;
 				margin: 0 auto;
 				margin-top: 70px;
 			}
@@ -74,6 +74,12 @@
 				float: left;
 				
 			}
+			.box12{
+				width: 1000px;
+				height: 436.81px;
+				margin: 0 auto;
+				margin-top: 0;
+			}
 		</style>
 	</head>
 	<body>
@@ -89,14 +95,17 @@
 			<p><font size="5" face="楷体">叹早茶是广州人的一种生活习惯，“叹”在广东话里的意思是享受，实际上叹早茶并不单纯是品茶，有粥品点心任你选择，粥有海鲜粥、皮蛋粥、艇仔粥等，点心品类更多，有叉烧包、水晶包、虾饺、凤爪、豆豉蒸排骨等，样样精致，件件诱人。点心放在蒸笼之中，由服务员推着小车在各桌之间穿梭，取拿非常方便。早茶的粥、点心，均为蒸煮制成，不用煎炸做法，更加卫生健康。</font></p>
 			<div class="box4">
 				<div class="phto1">
-					<img src="img/u=1379237011,360897990&fm=26&gp=0.jpg"  width="310px" height="436.81px"/>
+					<img src="../img/u=1379237011,360897990&fm=26&gp=0.jpg"  width="310px" height="436.81px"/>
 				</div>
 				<div class="phto2">
-					<img src="img/u=2775924267,4159486693&fm=26&gp=0.jpg"  width="310px" height="436.81px"/>
+					<img src="../img/u=2775924267,4159486693&fm=26&gp=0.jpg"  width="310px" height="436.81px"/>
 				</div>
 				<div class="phto3">
-					<img src="img/u=1379237011,360897990&fm=26&gp=0.jpg"  width="310px" height="436.81px"/>
+					<img src="../img/u=1379237011,360897990&fm=26&gp=0.jpg"  width="310px" height="436.81px"/>
 				</div>
+			</div>
+			<div class="box12">
+				<p><font size="7" face="楷体">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(完)</font></p>
 			</div>
 		</div>
 		</body>
