--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					<br />
 					<br />
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="我的爱好/"><font color="black" size="6" face="楷体">第五次作业</font></a>
+					<a href="我的爱好/index.html"><font color="black" size="6" face="楷体">第五次作业</font></a>
 				</div>
 				<div class="leftc">
 					<img src="我的军训生活/img/QQ图片20191021133712.png" width="294"/>
