--- a/index.html
+++ b/index.html
@@ -1,1 +1,108 @@
-Hello World
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<title>刘文杰的个人网页</title>
+		<style>
+			body{
+				background: cornsilk;
+				background: url(img/1566207674925.jpg);
+			}
+			.head{
+				width: 882px;
+				height: 1000px;
+				margin: 0 auto;
+			}
+			.left{
+				width: 588px;
+				height: 1000px;
+				margin: 0 auto;
+				float: left;
+			}
+			.right{
+				width: 294px;
+				height: 1000px;
+				margin: 0 auto;
+				float: left;
+			}
+			.lefta{
+				width: 588px;
+				height: 400px;
+				margin: 0 auto;
+				float: left;
+			}
+			.leftc{
+				width: 588px;
+				height: 298px;
+				margin: 0 auto;
+				margin-top: 20px;
+			}
+			.leftd{
+				width: 588px;
+				height: 50px;
+				margin: 0 auto;
+				margin-top: 400px;
+			}
+			.lefte{
+				margin-top: 0;
+			}
+			
+		</style>
+	</head>
+	<body  background="">
+		<div class="head">
+			<div class="left">
+				<div class="lefta">
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="CEE_volunteer_form/index.html"><font color="crimson" size="6" face="楷体">第一次作业</font></a>
+					<br />
+					<br />
+					<br />
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="高考志愿填报/index.html"><font color="crimson" size="6" face="楷体">第二次作业</font></a>
+					<br />
+					<br />
+					<br />
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="我的军训生活/index.html"><font color="crimson" size="6" face="楷体">第三次作业</font></a>
+					<br />
+					<br />
+					<br />
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="我的家乡/index.html"><font color="crimson" size="6" face="楷体">第四次作业</font></a>
+					<br />
+					<br />
+					<br />
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="我的爱好/index.html"><font color="black" size="6" face="楷体">第五次作业</font></a>
+				</div>
+				<div class="leftc">
+					<img src="我的军训生活/img/QQ图片20191021133712.png" width="294"/>
+				</div>
+				<div class="leftd">
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<font color="black" size="6" face="楷体">↑</font>
+					&nbsp;&nbsp;
+					<font color="black" size="6" face="楷体">本人照骗</font>
+					<br />
+				</div>
+				<div class="lefte">
+					<font color="black" size="6" face="楷体">什么？没有音乐？</font>
+					<br />
+					<font color="black" size="6" face="楷体">不好意思</font>
+					<br />
+					<font color="black" size="6" face="楷体">不玩那些花里胡哨的</font>
+					<br />
+					<font color="black" size="6" face="楷体">就这么简单</font>
+					<br/>
+					<font color="black" size="6" face="楷体">简约而不失奢华</font>
+					
+				</div>
+				<img src="我的军训生活/img/QQ图片20191021133818.png" />
+			</div>
+			<div class="right">
+			</div>
+		</div>
+
+	</body>
+</html>
