--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			}
 			.lefta{
 				width: 588px;
-				height: 400px;
+				height: 450px;
 				margin: 0 auto;
 				float: left;
 			}
@@ -41,7 +41,7 @@
 				width: 588px;
 				height: 50px;
 				margin: 0 auto;
-				margin-top: 400px;
+				margin-top: 420px;
 			}
 			.lefte{
 				margin-top: 0;
@@ -75,6 +75,11 @@
 					<br />
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					<a href="我的爱好/index.html"><font color="black" size="6" face="楷体">第五次作业</font></a>
+					<br />
+					<br />
+					<br />
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="第六次作业/"><font color="black" size="6" face="楷体">第六次作业</font></a>
 				</div>
 				<div class="leftc">
 					<img src="我的军训生活/img/QQ图片20191021133712.png" width="294"/>
