--- a/第六次作业/index.html
+++ b/第六次作业/index.html
@@ -1,6 +1,6 @@
 
 <!doctype html>
-<meta charset="utf-8"/>
+
 <html lang="zh-CN">
 
 <head>
@@ -12,7 +12,7 @@
   <meta name="theme-color" content="#FFF" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="format-detection" content="telephone=no">
-  <!-- <script src="//js.aq.qq.com/js/aq_common.js"></script> -->
+  
  
   <meta content="资讯,新闻,财经,房产,视频,NBA,科技,腾讯网,腾讯,QQ,Tencent" name="Keywords">
   <meta name="description" content="腾讯网从2003年创立至今，已经成为集新闻信息，区域垂直生活服务、社会化媒体资讯和产品为一体的互联网媒体平台。腾讯网下设新闻、科技、财经、娱乐、体育、汽车、时尚等多个频道，充分满足用户对不同类型资讯的需求。同时专注不同领域内容，打造精品栏目，并顺应技术发展趋势，推出网络直播等创新形式，改变了用户获取资讯的方式和习惯。" />
@@ -683,7 +683,7 @@ li.news-top-first {
     <ul class="news-list">
                                         <li class="news-pic-txt cf" bosszone="ycsp_2">
             <div class="pic video-box click-drag-play fl" bossvv="vv_ycsp">
-              <img src="img/u=2124675252,2004741909&fm=11&gp=0.jpg" alt="95后演艺圈新人超刚拒劝酒：不过敏没开车 就不想喝">
+              <img src="img/下载%20(2).jpg" alt="95后演艺圈新人超刚拒劝酒：不过敏没开车 就不想喝">
               <i class="q-icons icon-play2"></i>
               <div class="txt undis">95后演艺圈新人超刚拒劝酒：不过敏没开车 就不想喝</div>
               <div class="desc undis">p3017zpmcr4</div>
@@ -1032,20 +1032,19 @@ li.news-top-first {
   var currentFullYear = (new Date()).getFullYear();
   document.getElementById('currentFullYear').innerHTML = currentFullYear;
 </script>
-<!--4da8194e576cdf926f052e31b17b1875--><!--[if !IE]>|xGv00|ea8071af00fc0a50e0f8b0a2ad1d8db3<![endif]-->
-    <!-- /版权信息 -->
 
-    <!-- 电梯 -->
+
+    
     <div class="elevator" id="elevator">
       <a href="javascript:" class="refresh fix" id="js_refresh" title="刷新" bosszone="shuaxin"><span class="icon"></span><br />刷新</a>
       <a href="https://support.qq.com/products/4312" target="_blank" class="feedback fix" title="用户反馈" bosszone="fankui">用户<br />反馈</a>
       <a href="javascript:void(0)" target="_self" class="backtop" id="js_gotop" title="返回顶部" bosszone="dingbu"><span class="icon"></span></a>
     </div>
-    <!-- /电梯 -->
+    
 
   </div>
 
-  <!-- 视频弹层 -->
+  
   <div id="pop-player" class="pop-player">
   <div class="inner">
     <div class="player-hd">
@@ -1089,8 +1088,7 @@ li.news-top-first {
   <div class="min-bd">
     <div id="video-min" class="player-container"></div>
   </div>
-</div><!--ec4544fe058862e423cdc3225e110e49--><!--[if !IE]>|xGv00|6254f87b049c4c938babd0b80a015de3<![endif]-->
-  <!-- /视频浮层 -->
+</div>
 
   
   
@@ -1100,4 +1098,4 @@ li.news-top-first {
 
 </body>
 
-</html><!--[if !IE]>|xGv00|ff2e3f22c2b23be27adb78f88ecb0ca5<![endif]-->
+</html>
