--- a/我的爱好/index.html
+++ b/我的爱好/index.html
@@ -351,13 +351,13 @@
 		</div>
 		<div class="include">
 			<div class="tup">
-				<img src="img/024f78f0f736afc3a9f4146db919ebc4b7451239.png" height="80px" />
+				<img src="../img/432.jpg" height="80px" />
 			</div>
 			<div class="right">
 				<ul>
-					<li>地址：湘潭市雨湖区湘潭大学&nbsp;&nbsp;&nbsp;邮编：10300&nbsp;&nbsp;&nbsp;湘大邮箱：123456789@qq.com</li>
+					<li>地址：湘潭市雨湖区湘潭大学&nbsp;&nbsp;&nbsp;邮编：10300&nbsp;&nbsp;&nbsp;药来了邮箱：123456789@qq.com</li>
 					<li>联系电话：1001011&nbsp;&nbsp;&nbsp;&nbsp;1001012&nbsp;&nbsp;&nbsp;&nbsp;10086</li>
-					<li>版权所有：湘潭大学&nbsp;&nbsp;&nbsp;&nbsp;备案号：湘ICP备05005862号</li>
+					<li>版权所有：药来了&nbsp;&nbsp;&nbsp;&nbsp;备案号：湘ICP备05005862号</li>
 				</ul>
 			</div>
 			<div class="2weima">
